--- a/README
+++ b/README
@@ -1,17 +1,19 @@
-This will be a repository for senior UW bioengineering students to post their projects. Ideally, this will lead to students sharing their work for future students to implement or improve upon while completing their own work.
+This repository contains testing files and source code for my HaloAssayAnalyzer program.
 
-In order to contribute, create a new fodler for your project and put your files in that branch. By convention, the folder should have your name and graduation year in it; so for my project, the folder name is "Ross Jones ('14)"
+The program is a simple GUI which lets users select options for computing DNA damage metrics and classifying cells as apoptotic, necrotic, or healthy as determined by the halo assay. 
 
-You may organize your folder however you like, though please attempt to make it somewhat navigatable; ie do not just paste every file you have ever used into the directory and call it good. 
+Relevant publications:
 
-Thank you for your contribution to future learning!
+[25] Sestili P, Cantoni O. Osmotically driven radial diffusion of single-stranded DNA fragments on an agarose bed as a convenient measure of DNA strand scission. Free Radic Biol Med. 1999; 26: 1019-1026.
 
+[20] Singh NP, McCoy MT, Tice RR, Schneider EL. A simple technique for quantitation of low levels of DNA dama
+ge in individual cells. Exp Cell Res. 1988; 175: 184-191.
+[1] Singh NP. A simple method for accurate estimation of apoptotic cells. Exp Cell Res. 2000; 256: 328-337. 
 
-#######################
-#                     #
-#   Updated 2.7.14    #
-#                     #
-# Ross Jones   ('14)  #
-# Greg Medlock ('14)  #
-#                     #
-#######################
+[42] Meintieres S, Nesslany F, Pallardy M, Marzin D. Detection of ghost cells in the standard alkaline comet assay is not a good measure of apoptosis. Environ Mol Mutagen. 2003; 41: 260-269.
+
+[2] Sestili P, Martinelli C, Stocchi V. The fast halo assay: an improved method to quantify genomic DNA strand breakage at the single-cell level. Mutat Res. 2006; 607: 205-214.
+[26] Kadioglu E, Sardas S, Erturk S, Ozatamer O, Karakaya AE. Determination of DNA damage by alkaline halo and comet assay in patients under sevoflurane anesthesia. Toxicol Ind Health. 2009; 25: 205-212.
+
+[3] Qiao Y, Wang C, Su M, Ma L. Single cell DNA damage/repair assay using HaloChip. Anal Chem. 2012; 84: 1112-1116. 
+
