--- a/README
+++ b/README
@@ -12,3 +12,16 @@ Relevant publications:
 [6] Kadioglu E, Sardas S, Erturk S, Ozatamer O, Karakaya AE. Determination of DNA damage by alkaline halo and comet assay in patients under sevoflurane anesthesia. Toxicol Ind Health. 2009; 25: 205-212.
 [7] Qiao Y, Wang C, Su M, Ma L. Single cell DNA damage/repair assay using HaloChip. Anal Chem. 2012; 84: 1112-1116. 
 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Copyright (C) 2014 Ross Jones, Singh Laboratory, University of Washington
+ 
+Contact: jonesr18@gmail.com
+ 
+This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ 
+This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with this program. If not see http://www.gnu.org/licenses/gpl.html
+
+Updated 7.1.14
