--- a/README
+++ b/README
@@ -1,8 +1,10 @@
+# About
+
 This repository contains testing files and source code for my HaloAssayAnalyzer program.
 
 The program is a simple GUI which lets users select options for computing DNA damage metrics and classifying cells as apoptotic, necrotic, or healthy as determined by the halo assay. 
 
-Relevant publications:
+# Relevant Publications
 
 [1] Sestili P, Cantoni O. Osmotically driven radial diffusion of single-stranded DNA fragments on an agarose bed as a convenient measure of DNA strand scission. Free Radic Biol Med. 1999; 26: 1019-1026.
 [2] Singh NP, McCoy MT, Tice RR, Schneider EL. A simple technique for quantitation of low levels of DNA damage in individual cells. Exp Cell Res. 1988; 175: 184-191.
@@ -12,7 +14,7 @@ Relevant publications:
 [6] Kadioglu E, Sardas S, Erturk S, Ozatamer O, Karakaya AE. Determination of DNA damage by alkaline halo and comet assay in patients under sevoflurane anesthesia. Toxicol Ind Health. 2009; 25: 205-212.
 [7] Qiao Y, Wang C, Su M, Ma L. Single cell DNA damage/repair assay using HaloChip. Anal Chem. 2012; 84: 1112-1116. 
 
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# Licence
 
 Copyright (C) 2014 Ross Jones, Singh Laboratory, University of Washington
  
